--- a/product.css
+++ b/product.css
@@ -1,3 +1,6 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Grape+Nuts&family=Nunito:wght@300&display=swap');
 body{
     font-family: 'Grape Nuts',cursive;
 }
